--- a/passmoji/package.json
+++ b/passmoji/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "argon2": "^0.41.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "emoji-picker-react": "^4.12.0",
     "express": "^4.21.2",
     "lucide-react": "^0.475.0",
